--- a/package.json
+++ b/package.json
@@ -1,36 +1,18 @@
 {
-  "name": "proyecto-ipsum",
+  "name": "naid-final",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@fontsource/roboto": "^5.0.13",
-    "@mui/icons-material": "^5.16.1",
-    "@mui/material": "^5.16.1",
-    "axios": "^1.7.2",
-    "canvas-confetti": "^1.9.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.24.1"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.7.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.4",
-    "globals": "^15.8.0",
-    "prettier": "^3.3.3",
-    "prettier-eslint": "^16.3.0",
-    "vite": "^5.3.1"
+    "js-cookie": "^3.0.5",
+    "next": "14.2.5",
+    "react": "^18",
+    "react-dom": "^18",
+    "sharp": "^0.33.5"
   }
 }
